JDK 24: notes about JEP 472